@@ -201,182 +201,6 @@ block|}
 end_class
 
 begin_class
-DECL|class|LuceneQParser
-class|class
-name|LuceneQParser
-extends|extends
-name|QParser
-block|{
-DECL|field|lparser
-name|SolrQueryParser
-name|lparser
-decl_stmt|;
-DECL|method|LuceneQParser
-specifier|public
-name|LuceneQParser
-parameter_list|(
-name|String
-name|qstr
-parameter_list|,
-name|SolrParams
-name|localParams
-parameter_list|,
-name|SolrParams
-name|params
-parameter_list|,
-name|SolrQueryRequest
-name|req
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|qstr
-argument_list|,
-name|localParams
-argument_list|,
-name|params
-argument_list|,
-name|req
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-DECL|method|parse
-specifier|public
-name|Query
-name|parse
-parameter_list|()
-throws|throws
-name|SyntaxError
-block|{
-name|String
-name|qstr
-init|=
-name|getString
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|qstr
-operator|==
-literal|null
-operator|||
-name|qstr
-operator|.
-name|length
-argument_list|()
-operator|==
-literal|0
-condition|)
-return|return
-literal|null
-return|;
-name|String
-name|defaultField
-init|=
-name|getParam
-argument_list|(
-name|CommonParams
-operator|.
-name|DF
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|defaultField
-operator|==
-literal|null
-condition|)
-block|{
-name|defaultField
-operator|=
-name|getReq
-argument_list|()
-operator|.
-name|getSchema
-argument_list|()
-operator|.
-name|getDefaultSearchFieldName
-argument_list|()
-expr_stmt|;
-block|}
-name|lparser
-operator|=
-operator|new
-name|SolrQueryParser
-argument_list|(
-name|this
-argument_list|,
-name|defaultField
-argument_list|)
-expr_stmt|;
-name|lparser
-operator|.
-name|setDefaultOperator
-argument_list|(
-name|QueryParsing
-operator|.
-name|getQueryParserDefaultOperator
-argument_list|(
-name|getReq
-argument_list|()
-operator|.
-name|getSchema
-argument_list|()
-argument_list|,
-name|getParam
-argument_list|(
-name|QueryParsing
-operator|.
-name|OP
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-return|return
-name|lparser
-operator|.
-name|parse
-argument_list|(
-name|qstr
-argument_list|)
-return|;
-block|}
-annotation|@
-name|Override
-DECL|method|getDefaultHighlightFields
-specifier|public
-name|String
-index|[]
-name|getDefaultHighlightFields
-parameter_list|()
-block|{
-return|return
-name|lparser
-operator|==
-literal|null
-condition|?
-operator|new
-name|String
-index|[]
-block|{}
-else|:
-operator|new
-name|String
-index|[]
-block|{
-name|lparser
-operator|.
-name|getDefaultField
-argument_list|()
-block|}
-return|;
-block|}
-block|}
-end_class
-
-begin_class
 DECL|class|OldLuceneQParser
 class|class
 name|OldLuceneQParser
